docs/priorizacao,tabela requisitos, escopo

--- a/docs/Base/1.5.6.Tabela-Requisitos.md
+++ b/docs/Base/1.5.6.Tabela-Requisitos.md
@@ -1,10 +1,18 @@
+<center>
+
 # __Tabela de Requisitos__
+
+</center>
 
 ## __Introdução__
 
-Este documento apresenta a tabela de requisitos gerada a partir da reunião [6](../Projeto/Iniciativas%20Extras/ata_06.md), em que o grupo como um todo executou um Brainstorm e analisou o artefato do [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental), [análise de concorrência](../Base/1.2.5.Publico-Alvo.md#análise-de-concorrência) e [Rich Picture](../Base/1.2.2.RichPicture.md#rich-picture), buscando atender às necessidades dos usuários em áreas como postura, nutrição, saúde mental, exercícios físicos e acompanhamento especializado.
+Este documento apresenta a tabela de requisitos gerada a partir da [reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md), em que o grupo como um todo executou um Brainstorm e analisou o artefato do [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental), [análise de concorrência](../Base/1.2.5.Publico-Alvo.md#análise-de-concorrência) e [Rich Picture](../Base/1.2.2.RichPicture.md#rich-picture), buscando atender às necessidades dos usuários em áreas como postura, nutrição, saúde mental, exercícios físicos e acompanhamento especializado.
 
-A seguir a tabela de requisitos :
+Os requisitos forma divididos em **Requisitos Funcionais** e **Requisitos Não Funcionais**, como podemos ver na tabela a seguir:
+
+<center>
+
+#### **Tabela de Requisitos do Projeto**
 
 | **Setor de Interesse**                     | **Nº** | **Tipo** | **Requisito**                                                                                          |
 |-------------------------------------------|--------|----------|---------------------------------------------------------------------------------------------------------|
@@ -47,6 +55,19 @@ A seguir a tabela de requisitos :
 | 📅 Rotina e Hábitos                      | 30     | RF       | O sistema deve permitir o monitoramento de hábitos diários.                                             |
 |                                           | 36     | RF       | O sistema deve acompanhar o ciclo menstrual do usuário.                                                 |
 
+**Autor(es)**: _[Arthur](),[Carlos](), [Felipe](), [Gabriel](), [Letícia](), [Lucas](), [Luiza](), [Mateus](), [Pablo](), [Rodrigo]()_
+</center>
+
+---
+
+### **Rastreabilidade**
+
+Links para os artefatos referenciados:
+
+- [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md)
+- [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental)
+- [Análise de concorrência](../Base/1.2.5.Publico-Alvo.md#análise-de-concorrência) 
+- [Rich Picture](../Base/1.2.2.RichPicture.md#rich-picture)
 
 ---
 
@@ -54,4 +75,4 @@ A seguir a tabela de requisitos :
 
 | Versão | Data | Descrição | Autor | Revisor
 |:-:|:-:|:-:|:-:|:-:|
-|`1.0`| 09/04/2025 | Criação do documento| [LuizaMaluf](https://github.com/LuizaMaluf)|  |
+|`1.0`| 09/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)|  |
