--- a/docs/Base/1.5.7.Priorizacao.md
+++ b/docs/Base/1.5.7.Priorizacao.md
@@ -1,4 +1,8 @@
+<center>
+
 # __Priorização de Requisitos__
+
+</center>
 
 ## __Introdução__
 
@@ -6,20 +10,27 @@ Este documento tem como objetivo apresentar a priorização dos requisitos elici
 
 ## __Metodologia__
 
-Para a priorização de requisitos, foi utilizada a técnica **MoSCoW**, wue classifica cada item com base em sua importância relativa para os usuários e stakeholders. A sigla MoSCoW representa a seguintes categorias:
+Para a priorização de requisitos, foi utilizada a técnica **MoSCoW**, que classifica cada item com base em sua importância relativa para os usuários e stakeholders. A sigla MoSCoW representa a seguintes categorias:
 
-- **MUST (M) -** Requisitos que **devem serser implementados** no escopo mínimo do sistema. Sem eles, o sistema não atende às suas funções principais.
-- **Should (S) -** Requisitos importantes, mas que podem ser implementados posteriormente em comprometer o funcionamento inicial do sistema.
+- **MUST (M) -** Requisitos que **devem ser implementados** no escopo mínimo do sistema. Sem eles, o sistema não atende às suas funções principais.
+- **Should (S) -** Requisitos importantes, mas que **podem ser implementados posteriormente** em comprometer o funcionamento inicial do sistema.
+- **Could (C) -** Requisitos desejáveis, que **agragam valor**, mas não são prioritários neste momento. Podem ser incluídos caso haja tempo ou recursos disponíveis.
+- **Would (W) -** Requisitos considerados para **versões futuras** ou com prioridade mais baixa no contexto atual do projeto.
 
+Cada requisito identificado e documentado na [Tabela de Requisitos](../Base/1.5.6.Tabela-Requisitos.md#tabela-de-requisitos-do-projeto) foi classificado de acordo com essa categorização, levando em consideração fatores como: impacto para o usuário, viabilidade técnica, complexidade de implementação e alinhamento com os objetivos estratégicos da plataforma, como podemos ver a seguir:
 
-| **Nº** | **Requisito Sintetizado (Norma Padrão)**                                                                  | **Prioridade (MoSCoW)** |
+<center>
+
+#### __Tabela de Priorização__
+
+| **Nº** | **Requisito**                                                                                             | **Prioridade (MoSCoW)** |
 |-------|------------------------------------------------------------------------------------------------------------|--------------------------|
 | 1     | O usuário deve receber notificações personalizáveis.                                                       | Must                     |
-| 2     | O sistema deve disponibilizar exercícios e dicas para melhoria da postura e bem-estar físico.             | Must                     |
+| 2     | O sistema deve disponibilizar exercícios e dicas para melhoria da postura e bem-estar físico.              | Must                     |
 | 3     | O sistema deve disponibilizar vídeos ilustrativos de execução correta dos exercícios.                      | Would                    |
-| 4     | O sistema deve permitir o cadastro de usuários.                                                             | Must                     |
-| 5     | O sistema deve permitir o registro de perfis para especialistas.                                            | Must                     |
-| 6     | O sistema deve permitir o registro de perfis para usuários comuns.                                          | Must                     |
+| 4     | O sistema deve permitir o cadastro de usuários.                                                            | Must                     |
+| 5     | O sistema deve permitir o registro de perfis para especialistas.                                           | Must                     |
+| 6     | O sistema deve permitir o registro de perfis para usuários comuns.                                         | Must                     |
 | 7     | O sistema deve disponibilizar conteúdos educativos em vídeos, podcasts, artigos e repostagens.             | Could                    |
 | 8     | O usuário deve poder aplicar filtros para selecionar conteúdos por tipo, assunto ou tendências.            | Must                     |
 | 9     | O sistema deve permitir o registro do humor do usuário.                                                    | Should                   |
@@ -45,10 +56,28 @@ Para a priorização de requisitos, foi utilizada a técnica **MoSCoW**, wue cla
 | 29    | O sistema deve disponibilizar uma comunidade com feed interativo entre os usuários.                        | Could                    |
 | 30    | O sistema deve permitir o monitoramento de hábitos diários.                                                | Should                   |
 | 31    | O sistema deve permitir o uso de um diário pessoal.                                                        | Should                   |
-| 32    | O sistema deve oferecer receitas para apoio nutricional.                                                  | Would                    |
+| 32    | O sistema deve oferecer receitas para apoio nutricional.                                                   | Would                    |
 | 33    | O sistema deve incluir práticas de mindfulness.                                                            | Would                    |
 | 34    | O sistema deve incluir práticas de meditação.                                                              | Must                     |
 | 35    | O sistema deve sugerir alongamentos para o bem-estar do usuário.                                           | Would                    |
-| 36    | O sistema deve acompanhar o ciclo menstrual do usuário.                                                   | Should                   |
-| 37    | O sistema deve permitir a contagem de calorias.                                                             | Could                    |
-| 38    | O sistema deve permitir a criação e participação em desafios motivacionais.                               | Would                    |
+| 36    | O sistema deve acompanhar o ciclo menstrual do usuário.                                                    | Should                   |
+| 37    | O sistema deve permitir a contagem de calorias.                                                            | Could                    |
+| 38    | O sistema deve permitir a criação e participação em desafios motivacionais.                                | Would                    |
+
+**Autor(es)**: _[Luiza](), [Rodrigo](), [Felipe](), [Mateus]()_
+
+</center>
+
+---
+### **Rastreabilidade**
+
+- [Tabela de Requisitos](../Base/1.5.6.Tabela-Requisitos.md#tabela-de-requisitos-do-projeto)
+- [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md)
+
+---
+
+## Histórico de Versão
+
+| Versão | Data | Descrição | Autor | Revisor
+|:-:|:-:|:-:|:-:|:-:|
+|`1.0`| 09/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)|  |
