--- a/docs/Base/1.5.8.Escopo-minimo.md
+++ b/docs/Base/1.5.8.Escopo-minimo.md
@@ -1,6 +1,21 @@
+<center>
+
 # __Escopo Mínimo__
 
-## 📌 Escopo Mínimo do Sistema com Rastreabilidade (Requisitos Must)
+</center>
+
+
+
+## __Introdução__
+
+O presente documento descreve o Escopo Mínimo da plataforma voltada à promoção da saúde física, mental e nutricional dos usuários, com funcionalidades que integram bem-estar, acompanhamento personalizado e interações comunitárias.
+
+A definição do escopo mínimo foi realizada com base nos [requisitos levantados](../Base/1.5.6.Tabela-Requisitos.md#tabela-de-requisitos-do-projeto) durante a fase de elicitação, [análise de concorrência](../Base/1.2.5.Publico-Alvo.md#análise-de-concorrência), [Mapa Mental](../Base/1.2.1.Mapa-mental.md) e categorização com a técnica [MoSCoW (Must, Should, Could, Would)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização), que orientou a priorização de cada funcionalidade.
+
+---
+<center/>
+
+#### __Tabela de Escopo Mínimo__
 
 | **Nº Priorização** | **Requisito Sintetizado (Norma Padrão)**                                                                  |
 |--------------------|------------------------------------------------------------------------------------------------------------|
@@ -19,98 +34,102 @@
 | 26                 | O usuário deve conseguir registrar seus dados de saúde.                                                    |
 | 34                 | O sistema deve incluir práticas de meditação.                                                              |
 
+**Autor(es)**: _[Luiza](), [Rodrigo](), [Felipe](), [Mateus]()_
+
+</center>
+
 ---
 
-# Descrição das Funcionalidades do Escopo Mínimo
+## Descrição das Funcionalidades do Escopo Mínimo
 
 ## 📦 Módulo: Notificações e Alertas
 
-1. Notificações personalizáveis (Req. 1)
+1. [Notificações personalizáveis (Req. 1)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-O sistema deve permitir que o usuário configure quais tipos de notificações deseja receber (ex: postura, hidratação, meditação) e em que horários. Deve ser possível ativar/desativar categorias e definir frequência por categoria.
+**Descrição:** O sistema deve permitir que o usuário configure quais tipos de notificações deseja receber (ex: postura, hidratação, meditação) e em que horários. Deve ser possível ativar/desativar categorias e definir frequência por categoria.
 
 ## 🧘 Módulo: Bem-estar e Postura
 
-2. Exercícios e dicas para postura e bem-estar físico (Req. 2)
+2. [Exercícios e dicas para postura e bem-estar físico (Req. 2)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-O sistema deve exibir uma biblioteca de conteúdos com exercícios físicos e dicas voltadas à correção postural e melhoria do bem-estar físico. Cada exercício deve conter nome, descrição, tempo estimado, benefícios e um botão de "Iniciar exercício".
+**Descrição:** O sistema deve exibir uma biblioteca de conteúdos com exercícios físicos e dicas voltadas à correção postural e melhoria do bem-estar físico. Cada exercício deve conter nome, descrição, tempo estimado, benefícios e um botão de "Iniciar exercício".
 
 ## 👤 Módulo: Autenticação e Perfis
 
-3. Cadastro de usuários (Req. 4)
+3. [Cadastro de usuários (Req. 4)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-Usuários devem poder se cadastrar na plataforma com nome completo, e-mail, senha e confirmação de senha. O sistema deve validar os campos, armazenar com segurança (hashing de senha) e permitir login com autenticação segura.
+**Descrição:** Usuários devem poder se cadastrar na plataforma com nome completo, e-mail, senha e confirmação de senha. O sistema deve validar os campos, armazenar com segurança (hashing de senha) e permitir login com autenticação segura.
 
-4. Perfil de especialista (Req. 5)
+4. [Perfil de especialista (Req. 5)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-Especialistas devem se cadastrar com informações adicionais como área de atuação, CRN/CRM (ou equivalente), bio profissional e foto. O sistema deve ter um campo de seleção de tipo de perfil e habilitar campos específicos conforme a escolha.
+**Descrição:** Especialistas devem se cadastrar com informações adicionais como área de atuação, CRN/CRM (ou equivalente), bio profissional e foto. O sistema deve ter um campo de seleção de tipo de perfil e habilitar campos específicos conforme a escolha.
 
-5. Perfil de usuário comum (Req. 6)
+5. [Perfil de usuário comum (Req. 6)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-Usuários comuns devem possuir um perfil com campos como nome, idade, gênero, objetivo (ex: emagrecimento, qualidade de vida), e preferências (ex: alertas desejados, objetivos de saúde).
+**Descrição:** Usuários comuns devem possuir um perfil com campos como nome, idade, gênero, objetivo (ex: emagrecimento, qualidade de vida), e preferências (ex: alertas desejados, objetivos de saúde).
 
 ## 🎓 Módulo: Conteúdo Educativo
 
-6. Filtros para seleção de conteúdo (Req. 8)
+6. [Filtros para seleção de conteúdo (Req. 8)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-O sistema deve exibir conteúdos com filtros por tipo (vídeo, artigo, podcast), assunto (nutrição, saúde mental, postura, etc) e tendências (baseado em conteúdo mais acessado recentemente). Filtros devem ser combináveis e com UI intuitiva (ex: checkboxes e dropdowns).
+**Descrição:** O sistema deve exibir conteúdos com filtros por tipo (vídeo, artigo, podcast), assunto (nutrição, saúde mental, postura, etc) e tendências (baseado em conteúdo mais acessado recentemente). Filtros devem ser combináveis e com UI intuitiva (ex: checkboxes e dropdowns).
 
 ## 🏋️ Módulo: Treinos e Acompanhamento
 
-7. Registro de planos de treino (Req. 12)
+7. [Registro de planos de treino (Req. 12)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-Usuários devem poder registrar planos de treino com nome, tipo de exercício, tempo de execução, frequência semanal, metas e anotações. Treinos devem ser editáveis e salvos no perfil.
+**Descrição:** Usuários devem poder registrar planos de treino com nome, tipo de exercício, tempo de execução, frequência semanal, metas e anotações. Treinos devem ser editáveis e salvos no perfil.
 
-8. Acompanhamento de treinos por especialistas (Req. 13)
+8. [Acompanhamento de treinos por especialistas (Req. 13)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-Especialistas devem acessar os planos de treino de usuários que os autorizaram, visualizar dados como frequência, execução e feedback dos treinos. Deve haver uma interface com relatórios e comentários sugeridos pelo especialista.
+**Descrição:** Especialistas devem acessar os planos de treino de usuários que os autorizaram, visualizar dados como frequência, execução e feedback dos treinos. Deve haver uma interface com relatórios e comentários sugeridos pelo especialista.
 
 ## ⏱️ Módulo: Utilidades de Rotina
 
-9. Timer para controle de atividades (Req. 15)
+9. [Timer para controle de atividades (Req. 15)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-O sistema deve oferecer um cronômetro simples com opções de início, pausa e reinício. O tempo deve ser personalizável (ex: 5, 10, 20 minutos) e utilizado durante práticas como alongamentos ou exercícios físicos.
+**Descrição:** O sistema deve oferecer um cronômetro simples com opções de início, pausa e reinício. O tempo deve ser personalizável (ex: 5, 10, 20 minutos) e utilizado durante práticas como alongamentos ou exercícios físicos.
 
 ## 🩺 Módulo: Especialistas
 
-10. Catálogo de especialistas (Req. 16)
+10. [Catálogo de especialistas (Req. 16)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-Usuários devem acessar uma lista de especialistas com filtros por especialidade, nome ou área de atuação. Cada card de especialista deve exibir foto, nome, especialidade, bio curta e botão de visualizar perfil completo.
+**Descrição:** Usuários devem acessar uma lista de especialistas com filtros por especialidade, nome ou área de atuação. Cada card de especialista deve exibir foto, nome, especialidade, bio curta e botão de visualizar perfil completo.
 
 ## 💧 Módulo: Hidratação
 
-11. Alerta de hidratação (Req. 18)
+11. [Alerta de hidratação (Req. 18)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-O sistema deve enviar lembretes em horários pré-configurados (por padrão: 09h, 12h, 15h, 18h) para o usuário se hidratar. O usuário pode configurar esses horários e ativar/desativar os lembretes.
+**Descrição:** O sistema deve enviar lembretes em horários pré-configurados (por padrão: 09h, 12h, 15h, 18h) para o usuário se hidratar. O usuário pode configurar esses horários e ativar/desativar os lembretes.
 
 ## 🥗 Módulo: Nutrição
 
-12. Acompanhamento de planos alimentares por especialistas (Req. 22)
+12. [Acompanhamento de planos alimentares por especialistas (Req. 22)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-Especialistas devem acessar planos alimentares personalizados criados para seus pacientes, com campos como refeição, horários, alimentos recomendados e calorias. Devem poder comentar e atualizar os planos com base em feedback do paciente.
+**Descrição:** Especialistas devem acessar planos alimentares personalizados criados para seus pacientes, com campos como refeição, horários, alimentos recomendados e calorias. Devem poder comentar e atualizar os planos com base em feedback do paciente.
 
 ## ❤️ Módulo: Saúde Pessoal
 
-13. Registro de dados de saúde (Req. 26)
+13. [Registro de dados de saúde (Req. 26)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-Usuários devem registrar dados como peso, altura, IMC (calculado automaticamente), pressão arterial, glicemia, entre outros. Cada entrada deve conter data e observações. Os dados devem ser visualizáveis em gráficos e históricos.
+**Descrição:** Usuários devem registrar dados como peso, altura, IMC (calculado automaticamente), pressão arterial, glicemia, entre outros. Cada entrada deve conter data e observações. Os dados devem ser visualizáveis em gráficos e históricos.
 
 ## 🧘‍♂️ Módulo: Saúde Mental
 
-14. Práticas de meditação (Req. 34)
+14. [Práticas de meditação (Req. 34)](../Base/1.5.7.Priorizacao.md#tabela-de-priorização)
 
-Descrição:
-A plataforma deve oferecer uma seleção de sessões de meditação guiada com diferentes durações (ex: 5, 10, 20 minutos). Cada sessão deve conter título, áudio e descrição dos benefícios. Sessões podem ser marcadas como favoritas.
+**Descrição:** A plataforma deve oferecer uma seleção de sessões de meditação guiada com diferentes durações (ex: 5, 10, 20 minutos). Cada sessão deve conter título, áudio e descrição dos benefícios. Sessões podem ser marcadas como favoritas.
+
+---
+
+### **Rastreabilidade**
+
+- [Tabela de Requisitos](../Base/1.5.6.Tabela-Requisitos.md#tabela-de-requisitos-do-projeto)
+- [Priorização dos Requisitos](../Base/1.5.7.Priorizacao.md)
+- [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md)
+
+## Histórico de Versão
+
+| Versão | Data | Descrição | Autor | Revisor
+|:-:|:-:|:-:|:-:|:-:|
+|`1.0`| 09/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)|  |
