--- a/docs/Base/1.5.8.Escopo-minimo.md
+++ b/docs/Base/1.5.8.Escopo-minimo.md
@@ -132,4 +132,4 @@ A definição do escopo mínimo foi realizada com base nos [requisitos levantado
 
 | Versão | Data | Descrição | Autor | Revisor
 |:-:|:-:|:-:|:-:|:-:|
-|`1.0`| 09/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)|  |
+|`1.0`| 09/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)| [Lucas Bottino](https://github.com/bottinolucas) |
