--- a/docs/Base/1.5.6.Tabela-Requisitos.md
+++ b/docs/Base/1.5.6.Tabela-Requisitos.md
@@ -75,4 +75,4 @@ Links para os artefatos referenciados:
 
 | Versão | Data | Descrição | Autor | Revisor
 |:-:|:-:|:-:|:-:|:-:|
-|`1.0`| 09/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)|  |
+|`1.0`| 09/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)| [Lucas Bottino](https://github.com/bottinolucas) |
