--- a/docs/Base/1.5.7.Priorizacao.md
+++ b/docs/Base/1.5.7.Priorizacao.md
@@ -80,4 +80,4 @@ Cada requisito identificado e documentado na [Tabela de Requisitos](../Base/1.5.
 
 | Versão | Data | Descrição | Autor | Revisor
 |:-:|:-:|:-:|:-:|:-:|
-|`1.0`| 09/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)|  |
+|`1.0`| 09/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)| [Lucas Bottino](https://github.com/bottinolucas)  |
