adiciona diagrama metodologia

--- a/docs/Base/1.3.ModelagemBPMN.md
+++ b/docs/Base/1.3.ModelagemBPMN.md
@@ -50,9 +50,10 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 </div>
 
 
+
 ## Metodologia
 
-![Artefato ElicitMetodologiaação](../assets/bpmn_metodologia/bpmn_metodologia.jpeg)
+![Artefato Metodologia](../assets/bpmn_metodologia/bpmn_metodologia.jpeg)
 
 <figcaption align='center'>
     <b>Figura 3: Metodologia </b>
@@ -80,5 +81,7 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 | Versão | Data | Descrição | Autor | Revisor
 |:-:|:-:|:-:|:-:|:-:|
-|`1.0`| 09/04/2025 | Criação ModelagemBPMN | [Mateus Levy](https://github.com/mateus9levy) | |
+|`1.0`| 09/04/2025 | Criação ModelagemBPMN | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
+|`1.1`| 10/04/2025 | adiciona diagrama metodologia| [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
+
 
