atualizando diagrama uso do sistema

--- a/docs/Base/1.3.ModelagemBPMN.md
+++ b/docs/Base/1.3.ModelagemBPMN.md
@@ -45,10 +45,25 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 <div  style="text-align: center">
 
 
- <font size="3">Fonte: [Filipe](https://github.com/fillipeb50), [Luiza](https://github.com/LuizaMaluf), [Rodrigo](https://github.com/rodfon3301) 2024.</font>
+ <font size="3">Fonte: [Fillipe](https://github.com/fillipeb50), [Luiza](https://github.com/LuizaMaluf), [Rodrigo](https://github.com/rodfon3301), [Leticia](https://github.com/HladczukLe), 2024.</font>
 
 </div>
 
+## Uso do Sistema
+
+![Artefato usodoSistema](../assets/bpmn_uso_do_sistema/bpmn_uso_do_sistema.jpeg)
+
+<figcaption align='center'>
+    <b>Figura 3: Uso do Sistema </b>
+</figcaption>
+<br>
+
+<div  style="text-align: center">
+
+
+ <font size="3">Fonte: [Carlos](https://github.com/carlinn1), [Gabriel](https://github.com/gabrielsarcan), [Mateus](https://github.com/mateus9levy) 2024.</font>
+
+</div>
 
 
 ## Metodologia
@@ -56,7 +71,7 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 ![Artefato Metodologia](../assets/bpmn_metodologia/bpmn_metodologia.jpeg)
 
 <figcaption align='center'>
-    <b>Figura 3: Metodologia </b>
+    <b>Figura 4: Metodologia </b>
 </figcaption>
 <br>
 
@@ -82,6 +97,11 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 | Versão | Data | Descrição | Autor | Revisor
 |:-:|:-:|:-:|:-:|:-:|
 |`1.0`| 09/04/2025 | Criação ModelagemBPMN | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
-|`1.1`| 10/04/2025 | adiciona diagrama metodologia| [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
+|`1.1`| 09/04/2025 | adiciona diagrama metodologia| [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
+|`1.2`| 09/04/2025 | atualiza diagrama uso do sistema| [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
+
+
+
+
 
 
