--- a/docs/Base/1.1.DesignSprint.md
+++ b/docs/Base/1.1.DesignSprint.md
@@ -23,13 +23,11 @@ Compreender o desafio e reunir informações essenciais sobre o problema a ser r
 *Entregas:*  
 - Documento consolidando os mapas mentais gerados  
 - Discussões registradas com insights relevantes
-- Análise de concorrência e Matriz CSD
 
 *Artefatos produzidos:*  
 - [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental); 
 - [5W2H](../Base/1.2.3.5W2H.md);  
 - [Léxicos](../Base/1.2.4.Lexicos.md).  
-- [Publico-Alvo](../Base/1.2.5.Publico-Alvo.md).
 
 ---
 
@@ -81,6 +79,8 @@ Selecionar a ideia mais promissora para prototipagem.
 - Tabela de Requisitos
 - Escopo mínimo
 - Lista de Stakeholders
+- [Publico-Alvo](../Base/1.2.5.Publico-Alvo.md).
+- [Matriz CSD](../Base/1.2.5.Publico-Alvo#matriz-csd)
 
 ---
 
@@ -101,6 +101,7 @@ Desenvolver um protótipo de alta fidelidade que represente a solução ideal.
 
 *Artefatos produzidos:*  
 - Protótipo de alta fidelidade
+- Protótipo de baixa fidelidade
 
 ---
 
@@ -146,12 +147,3 @@ Validar a solução prototipada com usuários reais ou potenciais.
 | 1.1  | 09/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
 
 </div>
-
-
-[Mapa_mental]: Base/1.2.1.Mapa-mental.md
-[5W2H]: Base/1.2.3.5W2H.md
-[Publico-Alvo]: Base/1.2.5.Publico-Alvo.md
-[Rich_Picture]: Base/1.2.2.RichPicture.md
-[Léxicos]: Base/1.2.4.Lexicos.md
-[BPMN]: Base/1.3.ModelagemBPMN.md
-[Questionario]: Base/elicitacao/questionario/questionario.md
