--- a/docs/Base/1.1.DesignSprint.md
+++ b/docs/Base/1.1.DesignSprint.md
@@ -28,6 +28,7 @@ Compreender o desafio e reunir informações essenciais sobre o problema a ser r
 - [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental); 
 - [5W2H](../Base/1.2.3.5W2H.md);  
 - [Léxicos](../Base/1.2.4.Lexicos.md).  
+- [Analise de Concorrência](../Base/1.2.5.Publico-Alvo#análise-de-concorrência).
 
 ---
 
@@ -145,5 +146,8 @@ Validar a solução prototipada com usuários reais ou potenciais.
 | Versão | Data | Descrição | Autor | Revisor | 
 | :----: | :--: | --------- | ----------- | ------ | 
 | 1.1  | 09/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
+| Versão | Data | Descrição | Autor | Revisor | 
+| :----: | :--: | --------- | ----------- | ------ | 
+| 1.2  | 09/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
 
 </div>
