docs: adição do termo de consentimento e das perguntas abertas na documentação

--- a/docs/Base/1.1.1.Questionario.md
+++ b/docs/Base/1.1.1.Questionario.md
@@ -35,6 +35,9 @@ As afirmações foram planejadas de acordo com categorias de avaliação: **Logi
 5. **Confidencialidade**  
    Os dados coletados são anônimos e utilizados apenas para fins acadêmicos na disciplina de Arquitetura e Desenho de Software da UnB.
 
+6. **Termo de Consentimento**
+   Antes de iniciar o questionário, o participante deverá aceitar um **termo de consentimento**. Esse termo explica os objetivos do teste de usabilidade, garantindo que todas as respostas serão utilizadas apenas para fins de melhoria do aplicativo. A participação é totalmente voluntária, e o usuário pode desistir a qualquer momento.
+
 ---
 
 > **Observação:**  
@@ -88,7 +91,11 @@ Essas afirmações foram organizadas em categorias para abranger diferentes aspe
 - As instruções de ajuda são fáceis de encontrar.  
 - É possível identificar, pelo layout, onde encontrar artigos e tutoriais de autocuidado.  
 - A comunidade social (feeds, desafios) me motiva a usar o app.  
-- Eu recomendaria o EuMeAmo para um amigo.  
+- Eu recomendaria o EuMeAmo para um amigo. 
+
+### Perguntas abertas
+- O que você mais gostou no Eu Me Amo e o que poderia ser melhorado?
+- Há algo que você sentiu falta ou que gostaria de mudar no design ou na experiência da plataforma?
 
 
 ## Histórico de Versão
