--- a/docs/Base/1.5.10.Prototipação.md
+++ b/docs/Base/1.5.10.Prototipação.md
@@ -28,7 +28,7 @@ Os membros envolvidos na elaboração do protótipo foram:
 
 ## 3. Resultados
 
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="[https://www.figma.com/proto/32O4uTBCfRh2z1EiprOExd/EuMeAmo?node-id=14-60&t=XGPkSskCswRlc4p4-1]([https://www.figma.com/proto/32O4uTBCfRh2z1EiprOExd/EuMeAmo?node-id=30-1927&p=f&t=8oer5GsM7puegVqs-1&scaling=contain&content-scaling=fixed&page-id=30%3A20&starting-point-node-id=30%3A1927](https://www.figma.com/proto/32O4uTBCfRh2z1EiprOExd/EuMeAmo?node-id=30-1927&p=f&t=8oer5GsM7puegVqs-1&scaling=contain&content-scaling=fixed&page-id=30%3A20&starting-point-node-id=30%3A1927))" allowfullscreen></iframe>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/proto/32O4uTBCfRh2z1EiprOExd/EuMeAmo?node-id=30-1927&p=f&t=8oer5GsM7puegVqs-1&scaling=contain&content-scaling=fixed&page-id=30%3A20&starting-point-node-id=30%3A1927" allowfullscreen></iframe>
 
 ## 4. Paleta de Cores
 
