docs/bpmn-metodologia: corrigindo o arquivo bpmn de metodologia

--- a/docs/Base/1.3.ModelagemBPMN.md
+++ b/docs/Base/1.3.ModelagemBPMN.md
@@ -1,6 +1,6 @@
 # 1.3. Módulo Modelagem BPMN
 
-## __Introduçao__
+## **Introduçao**
 
 A BPMN (Business Process Model and Notation) é um jeito padronizado de mostrar processos de negócios usando diagramas visuais. Ela traz um conjunto bem definido de símbolos e regras que ajudam a desenhar os fluxos de atividades com o nível de detalhe que você precisar, dependendo do que o modelo exige.
 
@@ -8,12 +8,9 @@ Com a BPMN, dá pra criar processos novos do zero, melhorar os que já existem e
 
 O grande lance da BPMN é que ela deixa tudo mais claro com uma visão gráfica dos fluxos de tarefas, facilitando entender como os processos empresariais funcionam. Assim, fica simples enxergar cada etapa, apontar quem faz o quê, captar o funcionamento geral da empresa e ainda destacar o que pode ser ajustado pra ficar melhor.
 
-
-## __Metodologia__
+## **Metodologia**
 
 Este projeto de desenho de software adotará metodologias ágeis, com foco em Scrum e Extreme Programming (XP). O Scrum será utilizado para organizar o trabalho em sprints e promover entregas incrementais, enquanto o XP contribuirá com práticas técnicas como TDD, refatoração contínua e programação em par, garantindo qualidade e flexibilidade. A combinação dessas abordagens permitirá uma evolução contínua do sistema, com foco na colaboração, adaptação e entrega de valor ao cliente.
-
-
 
 ## Sprint Design
 
@@ -26,12 +23,9 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 <div  style="text-align: center">
 
- <font size="3">Fonte: [Arthur](https://github.com/arthurfonsecaa), [Lucas](https://github.com/bottinolucas), [Pablo](https://github.com/Pabloserrapxx) 2024.</font>
+<font size="3">Fonte: [Arthur](https://github.com/arthurfonsecaa), [Lucas](https://github.com/bottinolucas), [Pablo](https://github.com/Pabloserrapxx) 2024.</font>
 
 </div>
-
-
-
 
 ## Elicitação de Requisitos
 
@@ -44,8 +38,7 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 <div  style="text-align: center">
 
-
- <font size="3">Fonte: [Fillipe](https://github.com/fillipeb50), [Luiza](https://github.com/LuizaMaluf), [Rodrigo](https://github.com/rodfon3301), [Leticia](https://github.com/HladczukLe), 2024.</font>
+<font size="3">Fonte: [Fillipe](https://github.com/fillipeb50), [Luiza](https://github.com/LuizaMaluf), [Rodrigo](https://github.com/rodfon3301), [Leticia](https://github.com/HladczukLe), 2024.</font>
 
 </div>
 
@@ -60,15 +53,13 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 <div  style="text-align: center">
 
-
- <font size="3">Fonte: [Carlos](https://github.com/carlinn1), [Gabriel](https://github.com/gabrielsarcan), [Mateus](https://github.com/mateus9levy) 2024.</font>
+<font size="3">Fonte: [Carlos](https://github.com/carlinn1), [Gabriel](https://github.com/gabrielsarcan), [Mateus](https://github.com/mateus9levy) 2024.</font>
 
 </div>
 
-
 ## Metodologia
 
-![Artefato Metodologia](../assets/bpmn_metodologia/bpmn_metodologia.jpeg)
+![Artefato Metodologia](../assets/bpmn_metodologia/imagem-bpmn-metodologia.jpg)
 
 <figcaption align='center'>
     <b>Figura 4: Metodologia </b>
@@ -77,11 +68,9 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 <div  style="text-align: center">
 
-
- <font size="3">Fonte: [Carlos](https://github.com/carlinn1), [Gabriel](https://github.com/gabrielsarcan), [Mateus](https://github.com/mateus9levy) 2024.</font>
+<font size="3">Fonte: [Carlos](https://github.com/carlinn1), [Gabriel](https://github.com/gabrielsarcan), [Mateus](https://github.com/mateus9levy) 2024.</font>
 
 </div>
-
 
 ## Gravações da realização dos diagramas
 
@@ -91,17 +80,10 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 <iframe width="560" height="315" src="https://www.youtube.com/embed/033lENt9pqk?si=R3IZTteRWgcHv3lg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
-
 ## Histórico de Versão
 
-| Versão | Data | Descrição | Autor | Revisor
-|:-:|:-:|:-:|:-:|:-:|
-|`1.0`| 09/04/2025 | Criação ModelagemBPMN | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
-|`1.1`| 09/04/2025 | adiciona diagrama metodologia| [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
-|`1.2`| 09/04/2025 | atualiza diagrama uso do sistema| [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
-
-
-
-
-
-
+| Versão |    Data    |            Descrição             |                     Autor                     |                     Revisor                      |
+| :----: | :--------: | :------------------------------: | :-------------------------------------------: | :----------------------------------------------: |
+| `1.0`  | 09/04/2025 |      Criação ModelagemBPMN       | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
+| `1.1`  | 09/04/2025 |  adiciona diagrama metodologia   | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
+| `1.2`  | 09/04/2025 | atualiza diagrama uso do sistema | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
