Atualização da rastreabilidade e arrumando meu nome

--- a/docs/Base/1.1.DesignSprint.md
+++ b/docs/Base/1.1.DesignSprint.md
@@ -130,24 +130,22 @@ Validar a solução prototipada com usuários reais ou potenciais.
 
 ## 5. Rastrabilidade
 
-[Mapa_mental]: Base/1.2.1.Mapa-mental.md
-[5W2H]: Base/1.2.3.5W2H.md
-[Publico-Alvo]: Base/1.2.5.Publico-Alvo.md
-[Rich_Picture]: Base/1.2.2.RichPicture.md
-[Léxicos]: Base/1.2.4.Lexicos.md
-[BPMN]: Base/1.3.ModelagemBPMN.md
-[Questionario]: Base/elicitacao/questionario/questionario.md
+- [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental); 
+- [5W2H](../Base/1.2.3.5W2H.md);  
+- [Léxicos](../Base/1.2.4.Lexicos.md);  
+- [Analise de Concorrência](../Base/1.2.5.Publico-Alvo#análise-de-concorrência);
+- [Publico-Alvo](../Base/1.2.5.Publico-Alvo.md);
+- [Matriz CSD](../Base/1.2.5.Publico-Alvo#matriz-csd);
+- [BPMN](../Base/1.3.ModelagemBPMN.md);
+- [Rich_Picture](../Base/1.2.2.RichPicture.md);
+- [Questionario](../Base/elicitacao/questionario/questionario.md);
 
 ## 6. Histórico de Versão
 
 | Versão | Data | Descrição | Autor | Revisor | 
 | :----: | :--: | --------- | ----------- | ------ | 
 | 1.0  | 09/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
-| Versão | Data | Descrição | Autor | Revisor | 
-| :----: | :--: | --------- | ----------- | ------ | 
 | 1.1  | 09/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
-| Versão | Data | Descrição | Autor | Revisor | 
-| :----: | :--: | --------- | ----------- | ------ | 
-| 1.2  | 09/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
+| 1.2  | 10/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
 
 </div>
