--- a/docs/Base/1.2.1.Mapa-mental.md
+++ b/docs/Base/1.2.1.Mapa-mental.md
@@ -21,14 +21,14 @@ __Mapa Mental 1: Universo da Plataforma__
 
 ![Mapa Mental 1](../assets/mapas_mentais/mapamental_EuMeAmo_plataforma_autocuidado.png)
 
-__Autor(es):__ [Felipe Andrade](), [Luiza Maluf](), [Mateus Boquady]() e [Rodrigo Rodrigues]().
+__Autor(es):__ [Fillipe Andrade](), [Luiza Maluf](), [Mateus Boquady]() e [Rodrigo Rodrigues]().
 
 
 __Mapa Mental 2: Visão Técnica__
 
 ![Mapa Mental 2](../assets/mapas_mentais/mapamental_EuMeAmo_parte_tecnica.png)
 
-__Autor(es):__ [Felipe Andrade](), [Luiza Maluf](), [Mateus Boquady]() e [Rodrigo Rodrigues]().
+__Autor(es):__ [Fillipe Andrade](), [Luiza Maluf](), [Mateus Boquady]() e [Rodrigo Rodrigues]().
 
 </center>
 
