--- a/docs/Base/1.5.7.Priorizacao.md
+++ b/docs/Base/1.5.7.Priorizacao.md
@@ -64,7 +64,7 @@ Cada requisito identificado e documentado na [Tabela de Requisitos](../Base/1.5.
 | 37    | O sistema deve permitir a contagem de calorias.                                                            | Could                    |
 | 38    | O sistema deve permitir a criação e participação em desafios motivacionais.                                | Would                    |
 
-**Autor(es)**: _[Luiza](), [Rodrigo](), [Felipe](), [Mateus]()_
+**Autor(es)**: _[Luiza](), [Rodrigo](), [Fillipe](), [Mateus]()_
 
 </center>
 
