--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -1,32 +1,43 @@
 # 1.4. Participações (Base)
 
-Breve relato sobre as participações/contribuições de cada membro à entrega. 
+Breve relato sobre as participações/contribuições de cada membro à entrega.
 
 ## Módulo Design Sprint (Foco_1)
 
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
 
 EXEMPLO:
-| Fulano  |  1. Participação nas Etapas da Design Sprint elaborando artefatos | Boa | Registro nos Versionamentos do Documento de Design Sprint, conforme (link)
+| Fulano | 1. Participação nas Etapas da Design Sprint elaborando artefatos | Boa | Registro nos Versionamentos do Documento de Design Sprint, conforme (link)
 
 TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
 
+|            Nome do Membro            |                                      Contribuição                                      | Significância da Contribuição para o Projeto |                   Comprobatórios                    |
+| :----------------------------------: | :------------------------------------------------------------------------------------: | :------------------------------------------: | :-------------------------------------------------: |
+|     Lucas Gama De Araujo Bottino     |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+|          Luiza Maluf Amorim          |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+|         Arthur Fonseca Vale          |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+|    Carlos Henrique de Souza Bispo    |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+|       Fillipe Souto de Andrade       | Participação na reunião e na produção do Design Sprint e documentação do Design Sprint |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+|      Gabriel Saraiva Canabrava       |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+| Letícia de Cássia Hladczuk Rodrigues |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+|     Mateus Levy Avelans Boquady      |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+|         Pablo Serra Carvalho         |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+|               Rodrigo                |                      Não participou da confecção do Design Sprint                      |                     Nula                     | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
 
 ## Módulo Artefato Generalista (Foco_2)
 
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
 
 EXEMPLO:
-| Fulano  |  1. Elaboração do Artefato 5W2H | EXCELENTE | Registro nos Versionamentos do Documento do 5W2H, conforme (link) e Commits (links)
+| Fulano | 1. Elaboração do Artefato 5W2H | EXCELENTE | Registro nos Versionamentos do Documento do 5W2H, conforme (link) e Commits (links)
 
 TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
-
 
 ## Módulo Modelagem BPMN (Foco_3)
 
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
 
 EXEMPLO:
-| Fulano  |  1. Modelagem da atividade ATIVIDADE_X. 2. Participação no subprocesso SUBPROCESSO_Y | Regular | Registro nos Versionamentos do Documento de Modelagem BPMN, conforme (link) e debates nas Issues (links)
+| Fulano | 1. Modelagem da atividade ATIVIDADE_X. 2. Participação no subprocesso SUBPROCESSO_Y | Regular | Registro nos Versionamentos do Documento de Modelagem BPMN, conforme (link) e debates nas Issues (links)
 
 TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
